# caterpillar-rpi

./: .gitignore  LICENSE  README.md  server.sh
remote/: CMakeLists.txt
remote/client/: CMakeLists.txt  SpeedRegulator.qml  main.cpp  main.qml  movecontroller.cpp  movecontroller.h  networkclient.cpp  networkclient.h
remote/client/rc_client/: pubspec.yaml
remote/client/rc_client/android/app/: build.gradle
remote/client/rc_client/android/app/src/debug/: AndroidManifest.xml
remote/client/rc_client/android/app/src/main/: AndroidManifest.xml
remote/client/rc_client/android/app/src/main/kotlin/com/example/rc_client/: MainActivity.kt
remote/client/rc_client/lib/: main.dart
remote/client/rc_client/linux/: CMakeLists.txt  my_application.cc
remote/client/rc_client/web/: index.html
remote/client/rc_client/windows/: CMakeLists.txt
remote/client/rc_client/windows/runner/: Runner.rc  main.cpp
remote/messages/: CMakeLists.txt  move.proto
remote/server/: CMakeLists.txt  main.cpp
video/: client.sh  server.sh  stream.sh
